[gd_scene load_steps=2 format=2]

[ext_resource path="res://3DToolbox/ColBox.gd" type="Script" id=1]

[node name="ColBox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.396835
margin_bottom = -0.396851
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
text = "Colour"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 45.0
custom_constants/margin_right = 0
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 15 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 1.0
margin_right = 16.0
margin_bottom = 15.0
text = " R "

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
modulate = Color( 3, 0, 0, 1 )
margin_left = 20.0
margin_right = 1024.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_next = NodePath("../../HBoxContainer2/HSlider2")
focus_previous = NodePath("../../HBoxContainer3/HSlider3")
focus_mode = 0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 69.0
margin_right = 1024.0
margin_bottom = 85.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 1.0
margin_right = 18.0
margin_bottom = 15.0
text = " G "

[node name="HSlider2" type="HSlider" parent="HBoxContainer2"]
modulate = Color( 0, 1.30588, 0, 1 )
margin_left = 22.0
margin_right = 1024.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_next = NodePath("../../HBoxContainer3/HSlider3")
focus_previous = NodePath("../../HBoxContainer/HSlider")
focus_mode = 0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 15.0
text = " B "

[node name="HSlider3" type="HSlider" parent="HBoxContainer3"]
modulate = Color( 0, 0, 3, 1 )
margin_left = 21.0
margin_right = 1024.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_next = NodePath("../../HBoxContainer/HSlider")
focus_previous = NodePath("../../HBoxContainer2/HSlider2")
focus_mode = 0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="HBoxContainer3/HSlider3" to="." method="_on_HSlider3_value_changed"]
